sys: Final cleanup

--- a/Midgard.ioc
+++ b/Midgard.ioc
@@ -33,6 +33,7 @@ RCC.PLL48CLockSelection=RCC_CLK48SOURCE_PLLSAIP
 PH9.Signal=DCMI_D0
 RCC.I2C4Freq_Value=54000000
 RCC.APB2TimFreq_Value=216000000
+TIM4.OCMode_PWM-PWM\ Generation1\ CH1=TIM_OCMODE_ASSYMETRIC_PWM1
 PB6.Signal=I2C1_SCL
 PC7.Signal=S_TIM3_CH2
 PD0.Signal=UART4_RX
@@ -53,6 +54,7 @@ PK4.GPIO_Label=BTN0
 DSIHOST.HorizontalLine=1994
 PG14.Mode=RMII
 ProjectManager.FirmwarePackage=STM32Cube FW_F7 V1.16.1
+PF12.GPIO_Label=ErrorLed
 PI7.Locked=true
 ProjectManager.BackupPrevious=false
 SH.S_TIM12_CH1.0=TIM12_CH1,PWM Generation1 CH1
@@ -63,6 +65,7 @@ PE9.Locked=true
 PB1.GPIO_Label=GPIO3
 PG4.GPIO_Label=SEG_E
 PF10.Locked=true
+PF13.Locked=true
 PC9.Mode=I2C
 PI15.GPIOParameters=GPIO_Label
 PA8.Signal=I2C3_SCL
@@ -109,53 +112,54 @@ RCC.PLLSAIQCLKFreq_Value=64000000
 PE12.Mode=Full_Duplex_Master
 PI5.GPIO_PuPd=GPIO_PULLUP
 CORTEX_M7.AccessPermission-Cortex_Memory_Protection_Unit_Region3_Settings=MPU_REGION_FULL_ACCESS
-Mcu.Pin80=PD13
+Mcu.Pin80=PD11
 SH.S_TIM4_CH1.ConfNb=1
-Mcu.Pin81=PD14
+Mcu.Pin81=PD12
 CAN2.CalculateBaudRate=1000000
 PK4.Signal=GPIO_Input
 ProjectManager.ProjectFileName=Midgard.ioc
 PH13.Locked=true
 PH13.Signal=UART4_TX
-Mcu.Pin79=PD12
+Mcu.Pin79=PD10
+TIM4.CounterMode=TIM_COUNTERMODE_CENTERALIGNED1
 PI10.Locked=true
 Mcu.PinsNb=160
-Mcu.Pin73=PB14
-Mcu.Pin74=PB15
-Mcu.Pin71=PB12
-Mcu.Pin72=PB13
+Mcu.Pin73=PB12
+Mcu.Pin74=PB13
+Mcu.Pin71=PH11
+Mcu.Pin72=PH12
 PG5.Locked=true
 PC13.Locked=true
-Mcu.Pin77=PD10
+Mcu.Pin77=PD8
 SAI1.MClockEnable-SAI_A_MasterWithClock=SAI_MASTERCLOCK_ENABLE
-Mcu.Pin78=PD11
+Mcu.Pin78=PD9
 PG5.Signal=GPIO_Output
-Mcu.Pin75=PD8
+Mcu.Pin75=PB14
 PC13.Signal=GPIO_Input
-Mcu.Pin76=PD9
+Mcu.Pin76=PB15
 PG3.Locked=true
 CAN1.IPParameters=CalculateTimeQuantum,CalculateTimeBit,CalculateBaudRate,BS1,BS2,Prescaler
 PI6.GPIO_PuPd=GPIO_PULLUP
 PD3.Signal=USART2_CTS
 CAN2.IPParameters=CalculateTimeQuantum,CalculateTimeBit,CalculateBaudRate,BS1,BS2,Prescaler
-Mcu.Pin70=PH12
+Mcu.Pin70=PH10
 PG9.Mode=Slave_12_bits_External_Synchro
 PC2.Signal=SPI2_MISO
 PI12.Signal=GPIO_Output
 SAI1.ErrorAudioFreq-SAI_A_MasterWithClock=-2.34 %
-Mcu.Pin68=PH10
-Mcu.Pin69=PH11
+Mcu.Pin68=PH8
+Mcu.Pin69=PH9
 PB14.Locked=true
 PD6.Mode=Asynchronous
-Mcu.Pin62=PB11
+Mcu.Pin62=PE14
 PG14.Locked=true
-Mcu.Pin63=PJ5
-Mcu.Pin60=PE14
-Mcu.Pin61=PB10
-Mcu.Pin66=PH8
-Mcu.Pin67=PH9
-Mcu.Pin64=PH6
-Mcu.Pin65=PH7
+Mcu.Pin63=PB10
+Mcu.Pin60=PE12
+Mcu.Pin61=PE13
+Mcu.Pin66=PH6
+Mcu.Pin67=PH7
+Mcu.Pin64=PB11
+Mcu.Pin65=PJ5
 DSIHOST.Mode=DSI_VID_MODE_BURST
 ETH.IPParameters=MediaInterface
 PD10.Signal=GPIO_Output
@@ -163,25 +167,25 @@ PF11.Mode=Full_Duplex_Master
 PJ3.Signal=GPIO_Output
 PA15.Locked=true
 PI8.GPIO_Label=ICM_42605_INT1
-Mcu.Pin59=PE13
-Mcu.Pin57=PE11
-Mcu.Pin58=PE12
-Mcu.Pin51=PG0
+Mcu.Pin59=PE11
+Mcu.Pin57=PE9
+Mcu.Pin58=PE10
+Mcu.Pin51=PF14
 RCC.USART6Freq_Value=108000000
-Mcu.Pin52=PG1
-Mcu.Pin50=PF15
+Mcu.Pin52=PF15
+Mcu.Pin50=PF13
 CORTEX_M7.ART_ACCLERATOR_ENABLE=1
 RCC.PLLDSIVCOFreq_Value=1000000000
-Mcu.Pin55=PE9
-Mcu.Pin56=PE10
-Mcu.Pin53=PE7
-Mcu.Pin54=PE8
+Mcu.Pin55=PE7
+Mcu.Pin56=PE8
+Mcu.Pin53=PG0
+Mcu.Pin54=PG1
 PH9.Mode=Slave_12_bits_External_Synchro
 PJ14.GPIOParameters=GPIO_Label
 PB9.Locked=true
 PI12.Locked=true
 Mcu.Pin48=PF11
-Mcu.Pin49=PF14
+Mcu.Pin49=PF12
 Mcu.Pin46=PJ2
 Mcu.Pin47=PJ3
 SAI1.VirtualMode-SAI_A_MasterWithClock=VM_MASTER
@@ -192,7 +196,6 @@ Mcu.Pin40=PC5
 CORTEX_M7.Enable-Cortex_Memory_Protection_Unit_Region2_Settings=MPU_REGION_ENABLE
 Mcu.Pin41=PB0
 Mcu.Pin44=PJ0
-PC12.Mode=Asynchronous
 SH.S_TIM8_CH1.0=TIM8_CH1,Encoder_Interface
 Mcu.Pin45=PJ1
 Mcu.Pin42=PB1
@@ -218,6 +221,7 @@ Mcu.Pin34=PA3
 Mcu.Pin31=PA1
 Mcu.Pin32=PA2
 NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false
+PF13.Signal=GPIO_Output
 PJ15.GPIO_Label=SEG_SEL3
 RCC.PLLI2SQCLKFreq_Value=25000000
 PI9.GPIOParameters=GPIO_Label
@@ -269,7 +273,6 @@ PI11.GPIO_Label=RV_3028_C7_INT
 PE3.Signal=SAI1_SD_B
 PC15/OSC32_OUT.Signal=RCC_OSC32_OUT
 PF4.Signal=ADC3_IN14
-PD2.Signal=UART5_RX
 RCC.SDMMC2Freq_Value=216000000
 TIM12.IPParameters=Channel-PWM Generation1 CH1
 PC1.Mode=RMII
@@ -302,6 +305,7 @@ PC14/OSC32_IN.Mode=LSE-External-Oscillator
 PG5.GPIO_Label=SEG_F
 PC1.Locked=true
 PB15.Signal=SPI2_MOSI
+PF12.GPIOParameters=GPIO_Label
 PJ5.GPIO_Label=uSDDETECT
 PG11.Signal=GPIO_Input
 PJ14.GPIO_Label=SEG_SEL2
@@ -404,38 +408,38 @@ Mcu.IP32=TIM12
 CAN2.BS2=CAN_BS2_2TQ
 DSIHOST.IPParameters=NumberOfLanes,Mode,VerticalBackPorch,VerticalFrontPorch,HorizontalSyncActive,HorizontalBackPorch,FrameBTAAcknowledgeEnable,LPHorizontalFrontPorchEnable,LPHorizontalBackPorchEnable,LPVerticalActiveEnable,LPVerticalFrontPorchEnable,LPVerticalBackPorchEnable,LPVerticalSyncActiveEnable,GCEIE,BTA_FlowControl,ClockLaneLP2HSTime,DataLaneHS2LPTime,DataLaneLP2HSTime,LPCommandEnable,LPVACTLargestPacketSize,LPLargestPacketSize,HorizontalLine
 Mcu.IP31=TIM11
-Mcu.IP34=UART5
+Mcu.IP34=UART8
 PG11.Locked=true
 Mcu.IP33=UART4
 Mcu.IP30=TIM8
 ProjectManager.ToolChainLocation=
-Mcu.IP36=USART2
 RCC.DSIFreq_Value=62500000
-Mcu.IP35=UART8
+TIM4.OCMode_PWM-PWM\ Generation4\ CH4=TIM_OCMODE_ASSYMETRIC_PWM2
+Mcu.IP35=USART2
 PA15.Signal=SYS_JTDI
 PG0.GPIO_Label=SEG_A
 PF8.Signal=QUADSPI_BK1_IO0
 ADC2.SamplingTime-0\#ChannelRegularConversion=ADC_SAMPLETIME_3CYCLES
 PI0.GPIO_Label=SPI2_CE
 PI1.Mode=Slave_12_bits_External_Synchro
-Mcu.Pin95=PC6
+Mcu.Pin95=PG6
 CORTEX_M7.Size-Cortex_Memory_Protection_Unit_Region1_Settings=MPU_REGION_SIZE_2MB
-Mcu.Pin96=PC7
+Mcu.Pin96=PG7
 PF4.Locked=true
-Mcu.Pin93=PG6
-Mcu.Pin94=PG7
+Mcu.Pin93=PG4
+Mcu.Pin94=PG5
 I2C3.Timing=0x20404768
-Mcu.Pin99=PA9
+Mcu.Pin99=PC9
 PB5.GPIO_Label=JACK
-Mcu.Pin97=PC9
-Mcu.Pin98=PA8
+Mcu.Pin97=PC6
+Mcu.Pin98=PC7
 DSIHOST_CKN.Signal=DSIHOST_CKN
 SH.S_TIM5_CH1.0=TIM5_CH1,PWM Generation1 CH1
-Mcu.Pin91=PG4
-Mcu.Pin92=PG5
+Mcu.Pin91=PG2
+Mcu.Pin92=PG3
 PG11.GPIO_Label=BTN_JS1
 PC5.Signal=ETH_RXD1
-Mcu.Pin90=PG3
+Mcu.Pin90=DSIHOST_D1N
 PE7.Signal=QUADSPI_BK2_IO0
 PD6.Signal=USART2_RX
 SH.S_TIM11_CH1.0=TIM11_CH1,PWM Generation1 CH1
@@ -443,18 +447,18 @@ CORTEX_M7.IsShareable-Cortex_Memory_Protection_Unit_Region1_Settings=MPU_ACCESS_
 PE12.Locked=true
 VP_TIM3_VS_ClockSourceINT.Mode=Internal
 DSIHOST_D0P.Mode=DSIHost_Video
-Mcu.Pin84=DSIHOST_D0N
-Mcu.Pin85=DSIHOST_CKP
-Mcu.Pin82=PD15
+Mcu.Pin84=PD15
+Mcu.Pin85=DSIHOST_D0P
+Mcu.Pin82=PD13
 PB15.Locked=true
 PB4.Signal=SYS_JTRST
-Mcu.Pin83=DSIHOST_D0P
+Mcu.Pin83=PD14
 PG2.GPIO_Label=SEG_C
 PA3.Signal=ADCx_IN3
-Mcu.Pin88=DSIHOST_D1N
-Mcu.Pin89=PG2
-Mcu.Pin86=DSIHOST_CKN
-Mcu.Pin87=DSIHOST_D1P
+Mcu.Pin88=DSIHOST_CKN
+Mcu.Pin89=DSIHOST_D1P
+Mcu.Pin86=DSIHOST_D0N
+Mcu.Pin87=DSIHOST_CKP
 PK6.Signal=GPIO_Input
 PK6.Locked=true
 RCC.I2SFreq_Value=25000000
@@ -479,7 +483,7 @@ CORTEX_M7.BaseAddress-Cortex_Memory_Protection_Unit_Region2_Settings=0x20000000
 PF5.Mode=IN15
 RCC.FamilyName=M
 DSIHOST_CKN.Locked=true
-PD8.GPIO_Label=CAN_FD_STBY
+PD8.GPIO_Label=Touch_INT
 PB9.GPIOParameters=GPIO_Label
 PA13.Signal=SYS_JTMS-SWDIO
 DSIHOST.LPHorizontalBackPorchEnable=DSI_LP_HBP_ENABLE
@@ -491,6 +495,7 @@ CAN1.BS2=CAN_BS2_2TQ
 PF6.Signal=QUADSPI_BK1_IO3
 CAN1.BS1=CAN_BS1_6TQ
 PH8.Locked=true
+TIM4.OCMode_PWM-PWM\ Generation3\ CH3=TIM_OCMODE_ASSYMETRIC_PWM2
 PF6.Locked=true
 PH8.Signal=DCMI_HSYNC
 SH.S_TIM4_CH3.0=TIM4_CH3,PWM Generation3 CH3
@@ -503,11 +508,11 @@ PH13.Mode=Asynchronous
 PI5.GPIOParameters=GPIO_PuPd,GPIO_Label
 PD10.GPIO_Label=DSI_TE
 VP_TIM3_VS_ClockSourceINT.Signal=TIM3_VS_ClockSourceINT
+TIM4.Prescaler=60
 DSIHOST.GCEIE=HAL_DSI_ERROR_NONE
 PA1.Signal=ETH_REF_CLK
 SH.S_TIM4_CH3.ConfNb=1
 RCC.VCOI2SOutputFreq_Value=50000000
-PD2.Mode=Asynchronous
 DSIHOST_CKP.Signal=DSIHOST_CKP
 RCC.PLLSAIPCLKFreq_Value=48000000
 board=custom
@@ -536,6 +541,7 @@ PJ0.Signal=GPIO_Output
 ProjectManager.AskForMigrate=true
 PE0.Signal=UART8_RX
 PE12.Signal=SPI4_SCK
+TIM4.OCPolarity_4=TIM_OCPOLARITY_LOW
 CORTEX_M7.IsCacheable-Cortex_Memory_Protection_Unit_Region1_Settings=MPU_ACCESS_CACHEABLE
 Mcu.IP8=DCMI
 Mcu.IP9=DMA2D
@@ -548,6 +554,7 @@ KeepUserPlacement=false
 PJ5.Signal=GPIO_Input
 PA13.Locked=true
 DSIHOST.LPVerticalBackPorchEnable=DSI_LP_VBP_ENABLE
+PF13.GPIOParameters=GPIO_Label
 PC6.GPIOParameters=GPIO_Label
 CORTEX_M7.Enable-Cortex_Memory_Protection_Unit_Region3_Settings=MPU_REGION_ENABLE
 RCC.HSI_VALUE=16000000
@@ -561,6 +568,7 @@ PB7.Locked=true
 PA2.Mode=RMII
 PI14.Locked=true
 CORTEX_M7.CPU_DCache=Enabled
+TIM4.OCMode_PWM-PWM\ Generation2\ CH2=TIM_OCMODE_ASSYMETRIC_PWM1
 PD9.Locked=true
 PJ2.GPIO_Label=LD2
 ADC3.NbrOfConversionFlag=1
@@ -584,7 +592,6 @@ VP_TIM5_VS_ClockSourceINT.Signal=TIM5_VS_ClockSourceINT
 PG4.Signal=GPIO_Output
 PG4.Locked=true
 RCC.PLLCLKFreq_Value=216000000
-PC12.Signal=UART5_TX
 PG6.GPIO_Label=SEG_G
 PG3.GPIOParameters=GPIO_Label
 SPI5.DataSize=SPI_DATASIZE_8BIT
@@ -613,6 +620,7 @@ RCC.LCDTFTFreq_Value=27428571.42857143
 I2C4.Timing=0x20404768
 PE2.Mode=SAI_A_MasterWithClock
 PD4.Signal=USART2_RTS
+TIM4.Pulse-PWM\ Generation1\ CH1=0
 DSIHOST_CKP.Mode=DSIHost_Video
 PH1/OSC_OUT.Signal=RCC_OSC_OUT
 PB6.Mode=I2C
@@ -638,6 +646,7 @@ SH.S_TIM4_CH2.0=TIM4_CH2,PWM Generation2 CH2
 PE2.Signal=SAI1_MCLK_A
 PF8.Mode=Dual_Bank
 NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false
+TIM4.Period=8000
 PD3.Mode=CTS_RTS
 PE10.Signal=QUADSPI_BK2_IO3
 ADC1.SamplingTime-0\#ChannelRegularConversion=ADC_SAMPLETIME_3CYCLES
@@ -665,6 +674,7 @@ PI11.Signal=GPIO_Input
 RCC.DFSDMAudioFreq_Value=64000000
 CAN1.CalculateTimeBit=999.99
 SPI5.VirtualType=VM_MASTER
+TIM4.Pulse-PWM\ Generation2\ CH2=8000
 ProjectManager.CustomerFirmwarePackage=
 CORTEX_M7.IsBufferable-Cortex_Memory_Protection_Unit_Region0_Settings=MPU_ACCESS_BUFFERABLE
 PC4.Mode=RMII
@@ -672,6 +682,7 @@ CAN1.CalculateTimeQuantum=111.11111111111111
 PI10.GPIO_Label=LPS22HBTR_INT
 SH.COMP_DAC2_group.ConfNb=1
 DSIHOST.DataLaneLP2HSTime=17
+TIM4.Pulse-PWM\ Generation3\ CH3=4000
 PH15.Signal=DCMI_D11
 RCC.PLLQoutputFreq_Value=54000000
 PJ15.GPIOParameters=GPIO_Label
@@ -692,6 +703,7 @@ DSIHOST.ClockLaneLP2HSTime=36
 RCC.UART8Freq_Value=54000000
 PC0.Signal=ADCx_IN10
 RCC.APB1CLKDivider=RCC_HCLK_DIV4
+PF13.GPIO_Label=LightUp
 PI2.Mode=Slave_12_bits_External_Synchro
 SH.S_TIM8_CH2.0=TIM8_CH2,Encoder_Interface
 DSIHOST_CKP.Locked=true
@@ -702,7 +714,7 @@ TIM3.Channel-PWM\ Generation3\ CH3=TIM_CHANNEL_3
 PF1.Mode=I2C
 PA11.Locked=true
 PB11.Mode=RMII
-TIM4.IPParameters=Channel-PWM Generation1 CH1,Channel-PWM Generation2 CH2,Channel-PWM Generation3 CH3,Channel-PWM Generation4 CH4
+TIM4.IPParameters=Channel-PWM Generation1 CH1,Channel-PWM Generation2 CH2,Channel-PWM Generation3 CH3,Channel-PWM Generation4 CH4,Prescaler,Period,CounterMode,OCMode_PWM-PWM Generation1 CH1,OCMode_PWM-PWM Generation2 CH2,Pulse-PWM Generation2 CH2,OCMode_PWM-PWM Generation3 CH3,Pulse-PWM Generation3 CH3,OCMode_PWM-PWM Generation4 CH4,Pulse-PWM Generation4 CH4,OCPolarity_4,Pulse-PWM Generation1 CH1
 VP_CRC_VS_CRC.Signal=CRC_VS_CRC
 ADC2.IPParameters=Rank-0\#ChannelRegularConversion,Channel-0\#ChannelRegularConversion,SamplingTime-0\#ChannelRegularConversion,NbrOfConversionFlag,ClockPrescaler
 PC6.Locked=true
@@ -718,7 +730,8 @@ TIM8.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_DISABLE
 PI9.GPIO_Label=ICM_42605_INT1
 PH6.Mode=Full_Duplex_Master
 ProjectManager.LastFirmware=true
-Mcu.Pin116=PD2
+Mcu.Pin116=PD0
+TIM4.Pulse-PWM\ Generation4\ CH4=4000
 Mcu.Pin117=PD3
 Mcu.Pin118=PD4
 PH14.Mode=Slave_12_bits_External_Synchro
@@ -731,17 +744,18 @@ PE8.Signal=QUADSPI_BK2_IO1
 PI1.Signal=DCMI_D8
 VP_TIM12_VS_ClockSourceINT.Signal=TIM12_VS_ClockSourceINT
 RCC.RNGFreq_Value=48000000
-Mcu.Pin112=PA15
-Mcu.Pin113=PC11
-Mcu.Pin114=PC12
+Mcu.Pin112=PI3
+Mcu.Pin113=PA14
+Mcu.Pin114=PA15
 RCC.EthernetFreq_Value=216000000
 PF11.Locked=true
+PF12.Locked=true
 DSIHOST_D1P.Locked=true
-Mcu.Pin115=PD0
+Mcu.Pin115=PC11
 CORTEX_M7.AccessPermission-Cortex_Memory_Protection_Unit_Region0_Settings=MPU_REGION_FULL_ACCESS
 TIM3.IPParameters=Channel-PWM Generation1 CH1,Channel-PWM Generation2 CH2,Channel-PWM Generation3 CH3,Channel-PWM Generation4 CH4
-Mcu.Pin110=PI3
-Mcu.Pin111=PA14
+Mcu.Pin110=PI1
+Mcu.Pin111=PI2
 PA9.Locked=true
 Mcu.Pin127=PG11
 Mcu.Pin128=PG13
@@ -778,14 +792,14 @@ PF9.Signal=QUADSPI_BK1_IO1
 VP_TIM4_VS_ClockSourceINT.Mode=Internal
 TIM3.Channel-PWM\ Generation2\ CH2=TIM_CHANNEL_2
 PB8.Mode=Slave_12_bits_External_Synchro
-Mcu.Pin109=PI2
+Mcu.Pin109=PI0
 PE2.Locked=true
-Mcu.Pin105=PH14
+Mcu.Pin105=PA13
 PA8.Mode=I2C
-Mcu.Pin106=PH15
+Mcu.Pin106=PH13
 SPI2.DataSize=SPI_DATASIZE_8BIT
-Mcu.Pin107=PI0
-Mcu.Pin108=PI1
+Mcu.Pin107=PH14
+Mcu.Pin108=PH15
 PG3.GPIO_Label=SEG_D
 RCC.I2C2Freq_Value=54000000
 SPI5.IPParameters=VirtualType,Mode,Direction,DataSize,CLKPolarity,CLKPhase,CalculateBaudRate,BaudRatePrescaler
@@ -794,11 +808,11 @@ PC0.Locked=true
 PC1.Signal=ETH_MDC
 PG7.GPIOParameters=GPIO_Label
 PG10.GPIO_Label=BTN_JS0
-Mcu.Pin101=PA11
-Mcu.Pin102=PA12
-Mcu.Pin103=PA13
-Mcu.Pin104=PH13
-Mcu.Pin100=PA10
+Mcu.Pin101=PA9
+Mcu.Pin102=PA10
+Mcu.Pin103=PA11
+Mcu.Pin104=PA12
+Mcu.Pin100=PA8
 PK7.Signal=GPIO_Input
 PK7.Locked=true
 I2C2.IPParameters=Timing
@@ -815,7 +829,7 @@ PG6.Locked=true
 SPI4.Direction=SPI_DIRECTION_2LINES
 I2C2.Timing=0x20404768
 PI13.Locked=true
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_ADC1_Init-ADC1-false-HAL-true,4-MX_CAN1_Init-CAN1-false-HAL-true,5-MX_DAC_Init-DAC-false-HAL-true,6-MX_DCMI_Init-DCMI-false-HAL-true,7-MX_ETH_Init-ETH-false-HAL-true,8-MX_I2C2_Init-I2C2-false-HAL-true,9-MX_I2C4_Init-I2C4-false-HAL-true,10-MX_QUADSPI_Init-QUADSPI-false-HAL-true,11-MX_SPI2_Init-SPI2-false-HAL-true,12-MX_SPI4_Init-SPI4-false-HAL-true,13-MX_SPI5_Init-SPI5-false-HAL-true,14-MX_TIM3_Init-TIM3-false-HAL-true,15-MX_TIM4_Init-TIM4-false-HAL-true,16-MX_TIM8_Init-TIM8-false-HAL-true,17-MX_UART4_Init-UART4-false-HAL-true,18-MX_UART8_Init-UART8-false-HAL-true,19-MX_USART2_UART_Init-USART2-false-HAL-true,20-MX_CAN2_Init-CAN2-false-HAL-true,21-MX_I2C1_Init-I2C1-false-HAL-true,22-MX_I2C3_Init-I2C3-false-HAL-true,23-MX_TIM12_Init-TIM12-false-HAL-true,24-MX_TIM11_Init-TIM11-false-HAL-true,25-MX_ADC3_Init-ADC3-false-HAL-true,26-MX_ADC2_Init-ADC2-false-HAL-true,27-MX_SAI1_Init-SAI1-false-HAL-true,28-MX_TIM5_Init-TIM5-false-HAL-true,29-MX_UART5_Init-UART5-false-HAL-true,30-MX_RNG_Init-RNG-false-HAL-true,31-MX_CRC_Init-CRC-false-HAL-true,32-MX_DMA2D_Init-DMA2D-false-HAL-true,33-MX_DSIHOST_DSI_Init-DSIHOST-false-HAL-true,34-MX_LTDC_Init-LTDC-false-HAL-true,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_ADC1_Init-ADC1-false-HAL-true,4-MX_CAN1_Init-CAN1-false-HAL-true,5-MX_DAC_Init-DAC-false-HAL-true,6-MX_DCMI_Init-DCMI-false-HAL-true,7-MX_ETH_Init-ETH-false-HAL-true,8-MX_I2C2_Init-I2C2-false-HAL-true,9-MX_I2C4_Init-I2C4-false-HAL-true,10-MX_QUADSPI_Init-QUADSPI-false-HAL-true,11-MX_SPI2_Init-SPI2-false-HAL-true,12-MX_SPI4_Init-SPI4-false-HAL-true,13-MX_SPI5_Init-SPI5-false-HAL-true,14-MX_TIM3_Init-TIM3-false-HAL-true,15-MX_TIM4_Init-TIM4-false-HAL-true,16-MX_TIM8_Init-TIM8-false-HAL-true,17-MX_UART4_Init-UART4-false-HAL-true,18-MX_UART8_Init-UART8-false-HAL-true,19-MX_USART2_UART_Init-USART2-false-HAL-true,20-MX_CAN2_Init-CAN2-false-HAL-true,21-MX_I2C1_Init-I2C1-false-HAL-true,22-MX_I2C3_Init-I2C3-false-HAL-true,23-MX_TIM12_Init-TIM12-false-HAL-true,24-MX_TIM11_Init-TIM11-false-HAL-true,25-MX_ADC3_Init-ADC3-false-HAL-true,26-MX_ADC2_Init-ADC2-false-HAL-true,27-MX_SAI1_Init-SAI1-false-HAL-true,28-MX_TIM5_Init-TIM5-false-HAL-true,29-MX_RNG_Init-RNG-false-HAL-true,30-MX_CRC_Init-CRC-false-HAL-true,31-MX_DMA2D_Init-DMA2D-false-HAL-true,32-MX_DSIHOST_DSI_Init-DSIHOST-false-HAL-true,33-MX_LTDC_Init-LTDC-false-HAL-true,34-MX_TIM2_Init-TIM2-false-HAL-true,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true
 TIM8.EncoderMode=TIM_ENCODERMODE_TI12
 PA0/WKUP.Signal=S_TIM5_CH1
 PB0.GPIO_Label=GPIO2
@@ -845,10 +859,11 @@ PG11.GPIO_PuPd=GPIO_PULLUP
 PH0/OSC_IN.Mode=HSE-External-Oscillator
 PD11.GPIO_Label=DSI_RESET
 RCC.HCLKFreq_Value=216000000
-Mcu.IPNb=37
+Mcu.IPNb=36
 RCC.PLLI2SRoutputFreq_Value=25000000
 RCC.SPDIFRXFreq_Value=25000000
 SH.ADCx_IN3.ConfNb=1
+PF12.Signal=GPIO_Output
 PD8.GPIOParameters=GPIO_Label
 Mcu.Pin6=PC13
 Mcu.Pin7=PC14/OSC32_IN
@@ -1009,6 +1024,7 @@ ADC1.NbrOfConversionFlag=1
 PI15.Signal=GPIO_Output
 PB8.Signal=DCMI_D6
 PC9.Signal=I2C3_SDA
+NVIC.TIM4_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 RCC.APB1Freq_Value=54000000
 CORTEX_M7.AccessPermission-Cortex_Memory_Protection_Unit_Region4_Settings=MPU_REGION_FULL_ACCESS
 DSIHOST.LPLargestPacketSize=28
