ioc: Changed TIM4 to normal PWM

--- a/Midgard.ioc
+++ b/Midgard.ioc
@@ -33,7 +33,7 @@ RCC.PLL48CLockSelection=RCC_CLK48SOURCE_PLLSAIP
 PH9.Signal=DCMI_D0
 RCC.I2C4Freq_Value=54000000
 RCC.APB2TimFreq_Value=216000000
-TIM4.OCMode_PWM-PWM\ Generation1\ CH1=TIM_OCMODE_ASSYMETRIC_PWM1
+TIM4.OCMode_PWM-PWM\ Generation1\ CH1=TIM_OCMODE_PWM1
 PB6.Signal=I2C1_SCL
 PC7.Signal=S_TIM3_CH2
 PD0.Signal=UART4_RX
@@ -121,7 +121,7 @@ ProjectManager.ProjectFileName=Midgard.ioc
 PH13.Locked=true
 PH13.Signal=UART4_TX
 Mcu.Pin79=PD10
-TIM4.CounterMode=TIM_COUNTERMODE_CENTERALIGNED1
+TIM4.CounterMode=TIM_COUNTERMODE_UP
 PI10.Locked=true
 Mcu.PinsNb=160
 Mcu.Pin73=PB12
@@ -414,7 +414,7 @@ Mcu.IP33=UART4
 Mcu.IP30=TIM8
 ProjectManager.ToolChainLocation=
 RCC.DSIFreq_Value=62500000
-TIM4.OCMode_PWM-PWM\ Generation4\ CH4=TIM_OCMODE_ASSYMETRIC_PWM2
+TIM4.OCMode_PWM-PWM\ Generation4\ CH4=TIM_OCMODE_PWM1
 Mcu.IP35=USART2
 PA15.Signal=SYS_JTDI
 PG0.GPIO_Label=SEG_A
@@ -495,7 +495,7 @@ CAN1.BS2=CAN_BS2_2TQ
 PF6.Signal=QUADSPI_BK1_IO3
 CAN1.BS1=CAN_BS1_6TQ
 PH8.Locked=true
-TIM4.OCMode_PWM-PWM\ Generation3\ CH3=TIM_OCMODE_ASSYMETRIC_PWM2
+TIM4.OCMode_PWM-PWM\ Generation3\ CH3=TIM_OCMODE_PWM1
 PF6.Locked=true
 PH8.Signal=DCMI_HSYNC
 SH.S_TIM4_CH3.0=TIM4_CH3,PWM Generation3 CH3
@@ -568,7 +568,7 @@ PB7.Locked=true
 PA2.Mode=RMII
 PI14.Locked=true
 CORTEX_M7.CPU_DCache=Enabled
-TIM4.OCMode_PWM-PWM\ Generation2\ CH2=TIM_OCMODE_ASSYMETRIC_PWM1
+TIM4.OCMode_PWM-PWM\ Generation2\ CH2=TIM_OCMODE_PWM1
 PD9.Locked=true
 PJ2.GPIO_Label=LD2
 ADC3.NbrOfConversionFlag=1
@@ -609,7 +609,7 @@ PD4.Locked=true
 PC5.Mode=RMII
 PB13.Signal=CAN2_TX
 PG13.Signal=ETH_TXD0
-PinOutPanel.RotationAngle=0
+PinOutPanel.RotationAngle=180
 TIM3.Channel-PWM\ Generation4\ CH4=TIM_CHANNEL_4
 RCC.SYSCLKSource=RCC_SYSCLKSOURCE_PLLCLK
 PJ13.GPIO_Label=SEG_SEL1
@@ -646,7 +646,7 @@ SH.S_TIM4_CH2.0=TIM4_CH2,PWM Generation2 CH2
 PE2.Signal=SAI1_MCLK_A
 PF8.Mode=Dual_Bank
 NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false
-TIM4.Period=8000
+TIM4.Period=1000
 PD3.Mode=CTS_RTS
 PE10.Signal=QUADSPI_BK2_IO3
 ADC1.SamplingTime-0\#ChannelRegularConversion=ADC_SAMPLETIME_3CYCLES
@@ -682,7 +682,7 @@ CAN1.CalculateTimeQuantum=111.11111111111111
 PI10.GPIO_Label=LPS22HBTR_INT
 SH.COMP_DAC2_group.ConfNb=1
 DSIHOST.DataLaneLP2HSTime=17
-TIM4.Pulse-PWM\ Generation3\ CH3=4000
+TIM4.Pulse-PWM\ Generation3\ CH3=0
 PH15.Signal=DCMI_D11
 RCC.PLLQoutputFreq_Value=54000000
 PJ15.GPIOParameters=GPIO_Label
@@ -714,7 +714,7 @@ TIM3.Channel-PWM\ Generation3\ CH3=TIM_CHANNEL_3
 PF1.Mode=I2C
 PA11.Locked=true
 PB11.Mode=RMII
-TIM4.IPParameters=Channel-PWM Generation1 CH1,Channel-PWM Generation2 CH2,Channel-PWM Generation3 CH3,Channel-PWM Generation4 CH4,Prescaler,Period,CounterMode,OCMode_PWM-PWM Generation1 CH1,OCMode_PWM-PWM Generation2 CH2,Pulse-PWM Generation2 CH2,OCMode_PWM-PWM Generation3 CH3,Pulse-PWM Generation3 CH3,OCMode_PWM-PWM Generation4 CH4,Pulse-PWM Generation4 CH4,OCPolarity_4,Pulse-PWM Generation1 CH1
+TIM4.IPParameters=Channel-PWM Generation1 CH1,Channel-PWM Generation2 CH2,Channel-PWM Generation3 CH3,Channel-PWM Generation4 CH4,Prescaler,Period,CounterMode,OCMode_PWM-PWM Generation1 CH1,OCMode_PWM-PWM Generation2 CH2,OCMode_PWM-PWM Generation3 CH3,Pulse-PWM Generation3 CH3,OCMode_PWM-PWM Generation4 CH4,Pulse-PWM Generation4 CH4,OCPolarity_4,Pulse-PWM Generation1 CH1
 VP_CRC_VS_CRC.Signal=CRC_VS_CRC
 ADC2.IPParameters=Rank-0\#ChannelRegularConversion,Channel-0\#ChannelRegularConversion,SamplingTime-0\#ChannelRegularConversion,NbrOfConversionFlag,ClockPrescaler
 PC6.Locked=true
@@ -731,7 +731,7 @@ PI9.GPIO_Label=ICM_42605_INT1
 PH6.Mode=Full_Duplex_Master
 ProjectManager.LastFirmware=true
 Mcu.Pin116=PD0
-TIM4.Pulse-PWM\ Generation4\ CH4=4000
+TIM4.Pulse-PWM\ Generation4\ CH4=0
 Mcu.Pin117=PD3
 Mcu.Pin118=PD4
 PH14.Mode=Slave_12_bits_External_Synchro
